--- a/OtoGalerim/app/build.gradle
+++ b/OtoGalerim/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
+
+    compile 'me.relex:circleindicator:1.2.1@aar'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
