--- a/sohbetuygulamasi/app/src/main/AndroidManifest.xml
+++ b/sohbetuygulamasi/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity">
+        <activity android:name=".Acitivity.AnaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".KayitOlActivity"
+            android:name=".Acitivity.KayitOlActivity"
             android:label="@string/title_activity_kayit_ol"
             android:theme="@style/AppTheme.NoActionBar" />
 
