--- a/sohbetuygulamasi/app/src/main/AndroidManifest.xml
+++ b/sohbetuygulamasi/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
             android:name=".Acitivity.KayitOlActivity"
             android:label="@string/title_activity_kayit_ol"
             android:theme="@style/AppTheme.NoActionBar" />
-
+        <activity
+            android:name=".Acitivity.GirisActivity"
+            android:label="@string/title_activity_giris"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
