--- a/sohbetuygulamasi/app/build.gradle
+++ b/sohbetuygulamasi/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
     implementation group: 'com.android.support', name: 'design', version: '28.0.0-alpha1'
 
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
