--- a/asansor/app/src/main/AndroidManifest.xml
+++ b/asansor/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
         <activity android:name=".TahsilatYapPostActivity" />
         <activity android:name=".Activities.ArizaTanimlamaActivity" />
         <activity android:name=".Activities.ArizaTanimlamaPostActivity" />
-        <activity android:name=".Activities.YapilacakBakimlarActivity"></activity>
+        <activity android:name=".Activities.YapilacakBakimlarActivity" />
+        <activity android:name=".Activities.BekleyenArizalarActivity"></activity>
     </application>
 
 </manifest>
