netsiz kısım yeniden

--- a/asansor/app/src/main/AndroidManifest.xml
+++ b/asansor/app/src/main/AndroidManifest.xml
@@ -43,8 +43,8 @@
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <activity android:name=".GirisActivity" />
-        <activity android:name=".TahsilatYapActivity" />
-        <activity android:name=".TahsilatYapPostActivity" />
+        <activity android:name=".Activities.TahsilatYapActivity" />
+        <activity android:name=".Activities.TahsilatYapPostActivity" />
         <activity android:name=".Activities.ArizaTanimlamaActivity" />
         <activity android:name=".Activities.ArizaTanimlamaPostActivity" />
         <activity android:name=".Activities.YapilacakBakimlarActivity" />
