--- a/asansor/app/src/main/AndroidManifest.xml
+++ b/asansor/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!-- Required on api < 21 if you are using setRequiredNetworkType(int) -->
-    <!-- Required on all api levels if you are using setPersisted(true) -->
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -50,12 +49,11 @@
         <activity android:name=".Activities.YapilacakBakimlarActivity" />
         <activity android:name=".Activities.BekleyenArizalarActivity" />
         <activity android:name=".Activities.BakimActivity" />
-        <activity android:name=".Activities.ArizaActivity" />
         <activity android:name=".Activities.BakimSecActivity" />
         <activity android:name=".Activities.QRCodeArizaActivity" />
         <activity android:name=".Activities.BakimDurumActivity" />
         <activity android:name=".Activities.ArizaSecActivity" />
-        <activity android:name=".Activities.QRCodeBakimActivity"></activity>
+        <activity android:name=".Activities.QRCodeBakimActivity" />
     </application>
 
 </manifest>
