--- a/asansor/app/build.gradle
+++ b/asansor/app/build.gradle
@@ -21,7 +21,7 @@ android {
 dependencies {
 
 
-    implementation 'com.google.firebase:firebase-auth:11.6.0'
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -30,13 +30,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
     implementation 'com.android.support:support-v4:28.0.0-alpha1'
-    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
     implementation group: 'com.android.support', name: 'design', version: '28.0.0-alpha1'
     implementation 'uk.co.chrisjenx:calligraphy:2.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+    implementation 'com.android.support:multidex:1.0.3'
 
 
 
@@ -46,6 +43,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.4.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+
+
+    implementation project(':barcode-reader')
 
 
 }
