--- a/sohbetuygulamasi/app/build.gradle
+++ b/sohbetuygulamasi/app/build.gradle
@@ -1,5 +1,19 @@
 apply plugin: 'com.android.application'
 
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/'}
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.11.0, 0.99.99]'
+    }
+}
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
+repositories {
+    maven { url 'https://maven.google.com' }
+}
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -11,6 +25,11 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true //important
+        manifestPlaceholders = [
+                onesignal_app_id: 'bad222d4-ab0c-4ba5-b60a-ec6005bac410',
+                // Project number pulled from dashboard, local value is ignored.
+                onesignal_google_project_number: 'REMOTE'
+                ]
     }
     buildTypes {
         release {
@@ -36,6 +55,7 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:28.0.0-alpha1'
     implementation 'com.google.firebase:firebase-database:11.8.0'
     implementation 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
