--- a/sohbetuygulamasi/app/src/main/AndroidManifest.xml
+++ b/sohbetuygulamasi/app/src/main/AndroidManifest.xml
@@ -2,11 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ext.sohbetuygulamasi">
 
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:exported="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Acitivity.AnaActivity">
@@ -19,12 +23,13 @@
         <activity
             android:name=".Acitivity.KayitOlActivity"
             android:label="@string/title_activity_kayit_ol"
+            android:exported="true"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Acitivity.GirisActivity"
             android:label="@string/title_activity_giris"
+            android:exported="true"
             android:theme="@style/AppTheme" />
-        <activity android:name=".Acitivity.AnaAcitivity" />
         <activity
             android:name=".Acitivity.ChatActivity"
             android:label="@string/title_activity_chat"
