--- a/nobetciezcane/app/build.gradle
+++ b/nobetciezcane/app/build.gradle
@@ -20,7 +20,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
+    implementation 'com.android.support:support-v4:28.0.0-alpha1'
+    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
+    implementation group: 'com.android.support', name: 'design', version: '28.0.0-alpha1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.jsoup:jsoup:1.7.3'
     testImplementation 'junit:junit:4.12'
