--- a/nobetciezcane/app/src/main/AndroidManifest.xml
+++ b/nobetciezcane/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/eczaneimg"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
