--- a/sohbetuygulamasi/app/src/main/AndroidManifest.xml
+++ b/sohbetuygulamasi/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ttt"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:exported="true"
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity
+
             android:name=".Acitivity.KayitOlActivity"
             android:label="@string/title_activity_kayit_ol"
             android:exported="true"
