--- a/sohbetuygulamasi/app/build.gradle
+++ b/sohbetuygulamasi/app/build.gradle
@@ -18,7 +18,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.ext.sohbetuygulamasi"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -45,6 +45,8 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0-alpha1'
     implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
     implementation group: 'com.android.support', name: 'design', version: '28.0.0-alpha1'
+
+    compile project (':layoutmanagercard')
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
