--- a/sohbetuygulamasi/app/src/main/AndroidManifest.xml
+++ b/sohbetuygulamasi/app/src/main/AndroidManifest.xml
@@ -2,15 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ext.sohbetuygulamasi">
 
-
-
-
     <application
         android:allowBackup="true"
+        android:exported="true"
         android:icon="@drawable/ttt"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:exported="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Acitivity.AnaActivity">
@@ -21,26 +18,23 @@
             </intent-filter>
         </activity>
         <activity
-
             android:name=".Acitivity.KayitOlActivity"
-            android:label="@string/title_activity_kayit_ol"
             android:exported="true"
+            android:label="@string/title_activity_kayit_ol"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Acitivity.GirisActivity"
-            android:label="@string/title_activity_giris"
             android:exported="true"
+            android:label="@string/title_activity_giris"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".Acitivity.ChatActivity"
             android:label="@string/title_activity_chat"
-            android:theme="@style/AppTheme"></activity>
-
+            android:theme="@style/AppTheme" />
         <activity
-
             android:name=".Acitivity.CardActivity"
-            android:label="@string/title_activity_kayit_ol"
             android:exported="true"
+            android:label="@string/title_activity_kayit_ol"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
