--- a/sohbetuygulamasi/app/build.gradle
+++ b/sohbetuygulamasi/app/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.11.0, 0.99.99]'
+
     }
 }
 apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
@@ -60,7 +61,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+    //compile group: 'com.google.android.gms', name: 'play-services-ads-identifier', version: '11.8.0'
+    implementation 'com.google.android.gms:play-services-ads:15.0.0'
+    // implementation 'com.google.android.gms:play-services-ads:15.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
