--- a/sohbetuygulamasi/app/src/main/AndroidManifest.xml
+++ b/sohbetuygulamasi/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Acitivity.SplashActivity"></activity>
+        <activity android:name=".Acitivity.IlkKayitActivity"></activity>
+        <activity android:name=".Acitivity.SplashActivity" />
         <activity android:name=".Acitivity.AnaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
